--- a/composer.json
+++ b/composer.json
@@ -1,46 +1,23 @@
 {
-    "name": "hxphp/hxphp",
-    "description": "HXPHP - O seu primeiro framework.",
-    "type": "project",
-    "homepage": "http://www.hxphp.com.br/",
-    "keywords": ["framework", "hxphp"],
-    "license": "MIT",
+    "name": "Bruno/hxphp",
     "require": {
-        "php": ">=7.0.0",
-        "php-activerecord/php-activerecord": "dev-master"
-    },
-    "require-dev": {
-        "phpunit/phpunit": "^6.2"
+        "php-activerecord/php-activerecord": "dev-master",
+        "avbdr/php-bootstrap-form": "dev-master",
+        "verot/class.upload.php": "dev-master"
     },
     "authors": [
         {
             "name": "Bruno Campos Santos",
-            "email": "bruno@hxphp.com.br",
-            "role": "Developer"
+            "email": "bruno@hxphp.com.br"
         },
         {
             "name": "Gilglécio Santos",
-            "email": "gilglecio@hxphp.com.br",
-            "role": "Developer"
+            "email": "gilglecio@hxphp.com.br"
         }
     ],
-    "support": {
-        "issues": "https://github.com/brunosantoshx/hxphp/issues",
-        "wiki": "https://github.com/brunosantoshx/hxphp-docs"
-    },
     "autoload": {
-        "psr-4": {
-            "HXPHP\\": "src/HXPHP"
+        "psr-0": {
+            "": ["src/"]
         }
-    },
-    "autoload-dev": {
-        "psr-4": {
-            "Tests\\": "tests/HXPHP"
-        }
-    },
-    "config": {
-        "preferred-install": "dist",
-        "discard-changes": "stash",
-        "optimize-autoloader": true
     }
 }
